welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
avance()
getCouleurSol()
recule()
if getCouleurSol()=Color.green
return true
else return false
}        

do {isFacingTrail()}